--- a/src/GLSL.csproj
+++ b/src/GLSL.csproj
@@ -49,6 +49,7 @@
   </PropertyGroup>
   <ItemGroup>
     <Compile Include="Classification\GlslClassifierProvider.cs" />
+    <Compile Include="Classification\ISyntaxColorParser.cs" />
     <Compile Include="Contracts\ICompilerSettings.cs" />
     <Compile Include="Contracts\IShaderFileExtensionSettingsGenerated.cs">
       <DependentUpon>IShaderFileExtensionSettingsGenerated.tt</DependentUpon>
@@ -56,6 +57,7 @@
       <DesignTime>True</DesignTime>
     </Compile>
     <Compile Include="Errors\VsExpand.cs" />
+    <Compile Include="Contracts\IUserKeywords.cs" />
     <Compile Include="Options\OnEditorFileLoading.cs" />
     <Compile Include="VsLogger\VsOutput.cs" />
     <None Include="Classification\ClassificationTypes.t4" />
@@ -74,11 +76,6 @@
     </Compile>
     <Compile Include="Classification\SyntaxColorParser.cs" />
     <Compile Include="Contracts\ILogger.cs" />
-    <Compile Include="Language\GlslTokenizer.cs" />
-    <Compile Include="Language\IToken.cs" />
-    <Compile Include="Language\Token.cs" />
-    <Compile Include="Language\TokenType.cs" />
-    <Compile Include="Language\UserKeyWords.cs" />
     <Compile Include="Outlining\OutliningTagger.cs" />
     <Compile Include="Outlining\OutliningTaggerProvider.cs" />
     <Compile Include="Properties\AssemblyInfo.cs" />
@@ -101,22 +98,6 @@
     <Content Include="Resources\ShaderIcon.png">
       <CopyToOutputDirectory>Always</CopyToOutputDirectory>
       <IncludeInVSIX>true</IncludeInVSIX>
-    </Content>
-  </ItemGroup>
-  <ItemGroup>
-    <None Include="Language\glslKeywords.txt" />
-    <None Include="Language\glslFunctions.txt" />
-    <None Include="Language\glslVariables.txt" />
-    <Compile Include="Language\GlslSpecification.cs" />
-    <Compile Include="Language\GlslSpecificationGenerated.cs">
-      <AutoGen>True</AutoGen>
-      <DesignTime>True</DesignTime>
-      <DependentUpon>GlslSpecificationGenerated.tt</DependentUpon>
-    </Compile>
-    <None Include="Language\helper.t4" />
-    <Content Include="Language\GlslSpecificationGenerated.tt">
-      <Generator>TextTemplatingFileGenerator</Generator>
-      <LastGenOutput>GlslSpecificationGenerated.cs</LastGenOutput>
     </Content>
   </ItemGroup>
   <ItemGroup>
@@ -199,7 +180,7 @@
   </ItemGroup>
   <ItemGroup>
     <PackageReference Include="GLSLhelper">
-      <Version>0.1.13</Version>
+      <Version>0.3.17</Version>
     </PackageReference>
     <PackageReference Include="Microsoft.VisualStudio.Composition">
       <Version>16.4.11</Version>
@@ -207,7 +188,7 @@
     <PackageReference Include="Microsoft.VisualStudio.SDK" Version="15.0.0" ExcludeAssets="runtime">
       <IncludeAssets>compile; build; native; contentfiles; analyzers; buildtransitive</IncludeAssets>
     </PackageReference>
-    <PackageReference Include="Microsoft.VSSDK.BuildTools" Version="16.6.2057">
+    <PackageReference Include="Microsoft.VSSDK.BuildTools" Version="16.6.2058">
       <IncludeAssets>runtime; build; native; contentfiles; analyzers; buildtransitive</IncludeAssets>
       <PrivateAssets>all</PrivateAssets>
     </PackageReference>
