--- a/appveyor.yml
+++ b/appveyor.yml
@@ -10,7 +10,7 @@ assembly_info:
   assembly_file_version: "{version}"
   assembly_informational_version: "{version}"
 
-image: Visual Studio 2017
+image: Visual Studio 2017 # with 2019 maybe problems with the extension
 
 configuration:
 - Release
