--- a/src/GLSL.csproj
+++ b/src/GLSL.csproj
@@ -48,6 +48,7 @@
     <CreateVsixContainer>True</CreateVsixContainer>
   </PropertyGroup>
   <ItemGroup>
+    <Compile Include="Classification\ColorTools.cs" />
     <Compile Include="Classification\GlslClassifierProvider.cs" />
     <Compile Include="Classification\ISyntaxColorParser.cs" />
     <Compile Include="Contracts\ICompilerSettings.cs" />
@@ -188,15 +189,18 @@
     <PackageReference Include="Microsoft.VisualStudio.SDK" Version="15.0.1" ExcludeAssets="runtime">
       <IncludeAssets>compile; build; native; contentfiles; analyzers; buildtransitive</IncludeAssets>
     </PackageReference>
-    <PackageReference Include="Microsoft.VSSDK.BuildTools" Version="16.8.2">
+    <PackageReference Include="Microsoft.VSSDK.BuildTools" Version="16.8.3038">
       <IncludeAssets>runtime; build; native; contentfiles; analyzers; buildtransitive</IncludeAssets>
       <PrivateAssets>all</PrivateAssets>
     </PackageReference>
     <PackageReference Include="OpenTK">
       <Version>3.2.0</Version>
     </PackageReference>
+    <PackageReference Include="System.Drawing.Primitives">
+      <Version>4.3.0</Version>
+    </PackageReference>
     <PackageReference Include="System.Reactive">
-      <Version>4.4.1</Version>
+      <Version>5.0.0</Version>
     </PackageReference>
   </ItemGroup>
   <ItemGroup>
