--- a/src/GLSL.csproj
+++ b/src/GLSL.csproj
@@ -190,63 +190,63 @@
       <Version>16.9.20</Version>
     </PackageReference>
     <PackageReference Include="Microsoft.VisualStudio.Imaging">
-      <Version>16.10.31321.278</Version>
+      <Version>17.0.0-previews-2-31512-422</Version>
     </PackageReference>
     <PackageReference Include="Microsoft.VisualStudio.Imaging.Interop.14.0.DesignTime">
-      <Version>16.10.31320.204</Version>
+      <Version>17.0.0-previews-2-31512-422</Version>
     </PackageReference>
-    <PackageReference Include="Microsoft.VisualStudio.SDK" Version="16.10.31321.278" ExcludeAssets="runtime">
-      <IncludeAssets>all</IncludeAssets>
+    <PackageReference Include="Microsoft.VisualStudio.SDK" Version="17.0.0-previews-2-31512-422" ExcludeAssets="runtime">
+      <IncludeAssets>compile; build; native; contentfiles; analyzers; buildtransitive</IncludeAssets>
     </PackageReference>
     <PackageReference Include="Microsoft.VisualStudio.Shell.15.0">
-      <Version>16.10.31321.278</Version>
+      <Version>17.0.0-previews-2-31512-422</Version>
     </PackageReference>
     <PackageReference Include="Microsoft.VisualStudio.Shell.Framework">
-      <Version>16.10.31321.278</Version>
+      <Version>17.0.0-previews-2-31512-422</Version>
     </PackageReference>
     <PackageReference Include="Microsoft.VisualStudio.Shell.Interop">
-      <Version>16.10.31320.204</Version>
+      <Version>17.0.0-previews-2-31512-422</Version>
     </PackageReference>
     <PackageReference Include="Microsoft.VisualStudio.Shell.Interop.10.0">
-      <Version>16.10.31320.204</Version>
+      <Version>17.0.0-previews-2-31512-422</Version>
     </PackageReference>
     <PackageReference Include="Microsoft.VisualStudio.Shell.Interop.11.0">
-      <Version>16.10.31320.204</Version>
+      <Version>17.0.0-previews-2-31512-422</Version>
     </PackageReference>
     <PackageReference Include="Microsoft.VisualStudio.Shell.Interop.12.0">
-      <Version>16.10.31320.204</Version>
+      <Version>17.0.0-previews-2-31512-422</Version>
     </PackageReference>
     <PackageReference Include="Microsoft.VisualStudio.Shell.Interop.14.0.DesignTime">
       <Version>16.10.31320.204</Version>
     </PackageReference>
     <PackageReference Include="Microsoft.VisualStudio.Shell.Interop.8.0">
-      <Version>16.10.31320.204</Version>
+      <Version>17.0.0-previews-2-31512-422</Version>
     </PackageReference>
     <PackageReference Include="Microsoft.VisualStudio.Text.Data">
-      <Version>16.10.230</Version>
+      <Version>17.0.191-preview-gdb4a0010f6</Version>
     </PackageReference>
     <PackageReference Include="Microsoft.VisualStudio.Text.Logic">
-      <Version>16.10.230</Version>
+      <Version>17.0.191-preview-gdb4a0010f6</Version>
     </PackageReference>
     <PackageReference Include="Microsoft.VisualStudio.Text.UI">
-      <Version>16.10.230</Version>
+      <Version>17.0.191-preview-gdb4a0010f6</Version>
     </PackageReference>
     <PackageReference Include="Microsoft.VisualStudio.Text.UI.Wpf">
-      <Version>16.10.230</Version>
+      <Version>17.0.191-preview-gdb4a0010f6</Version>
     </PackageReference>
     <PackageReference Include="Microsoft.VisualStudio.TextManager.Interop">
-      <Version>16.10.31320.204</Version>
+      <Version>17.0.0-previews-2-31512-422</Version>
     </PackageReference>
     <PackageReference Include="Microsoft.VisualStudio.TextManager.Interop.8.0">
-      <Version>16.10.31320.204</Version>
+      <Version>17.0.0-previews-2-31512-422</Version>
     </PackageReference>
     <PackageReference Include="Microsoft.VisualStudio.Threading">
-      <Version>16.10.56</Version>
+      <Version>17.0.26-alpha</Version>
     </PackageReference>
     <PackageReference Include="Microsoft.VisualStudio.Utilities">
-      <Version>16.10.31321.278</Version>
+      <Version>17.0.0-previews-2-31512-422</Version>
     </PackageReference>
-    <PackageReference Include="Microsoft.VSSDK.BuildTools" Version="16.10.1055">
+    <PackageReference Include="Microsoft.VSSDK.BuildTools" Version="17.0.2155-preview2">
       <IncludeAssets>all</IncludeAssets>
       <PrivateAssets>all</PrivateAssets>
     </PackageReference>
@@ -257,6 +257,9 @@
       <Version>4.3.0</Version>
     </PackageReference>
     <PackageReference Include="System.Reactive">
+      <Version>5.0.0</Version>
+    </PackageReference>
+    <PackageReference Include="System.Resources.Extensions">
       <Version>5.0.0</Version>
     </PackageReference>
   </ItemGroup>
