--- a/src/GLSL.csproj
+++ b/src/GLSL.csproj
@@ -10,6 +10,7 @@
     <Configuration Condition=" '$(Configuration)' == '' ">Debug</Configuration>
     <Platform Condition=" '$(Platform)' == '' ">AnyCPU</Platform>
     <SchemaVersion>2.0</SchemaVersion>
+    <LangVersion>7.1</LangVersion>
     <ProjectTypeGuids>{82b43b9b-a64c-4715-b499-d71e9ca2bd60};{FAE04EC0-301F-11D3-BF4B-00C04F79EFBC}</ProjectTypeGuids>
     <ProjectGuid>{1263F508-47FF-4AE9-9783-2685E3984FCF}</ProjectGuid>
     <OutputType>Library</OutputType>
