Fixed x86 Build not building, all versions can now be built! need someone to test the vs2017 support for the x86 assembly but it *should* work.

--- a/GLSLx64/GLSLx64.csproj
+++ b/GLSLx64/GLSLx64.csproj
@@ -88,6 +88,13 @@
     </Reference>
     <Reference Include="WindowsBase" />
   </ItemGroup>
+	<ItemGroup>
+		<Reference Include="PresentationCore" />
+		<Reference Include="PresentationFramework" />
+		<Reference Include="System" />
+		<Reference Include="System.Xaml" />
+		<Reference Include="WindowsBase" />
+	</ItemGroup>
   <ItemGroup>
     <Content Include="Resources\Add.png" />
     <Content Include="Resources\LICENSE.txt">
