Moved Compilation Outputs to shared folder in Solution Directory. Builds are in bin\ Intermediates(objs) are in binInt\
done for clean-ness and organises the code into one area instead of across multiple project folders. and should not affect grabbing for deployment in appveyor.

--- a/appveyor.yml
+++ b/appveyor.yml
@@ -1,4 +1,4 @@
-version: 0.10.{build}
+version: 0.11.{build}
 
 skip_tags: true # avoid deploy to GitHub loop 
 
@@ -10,7 +10,7 @@ assembly_info:
   assembly_file_version: "{version}"
   assembly_informational_version: "{version}"
 
-image: Visual Studio 2017 # with 2019 maybe problems with the extension
+image: Visual Studio 2019
 
 configuration:
 - Release
