--- a/appveyor.yml
+++ b/appveyor.yml
@@ -19,7 +19,8 @@ install:
 - ps: (new-object Net.WebClient).DownloadString("https://raw.github.com/madskristensen/ExtensionScripts/master/AppVeyor/vsix.ps1") | iex
 
 before_build:
-- ps: Vsix-IncrementVsixVersion | Vsix-UpdateBuildVersion
+- ps: Vsix-IncrementVsixVersion .\GLSLx64\source.extension.vsixmanifest | Vsix-UpdateBuildVersion
+- ps: Vsix-IncrementVsixVersion .\GLSL\source.extension.vsixmanifest | Vsix-UpdateBuildVersion
 - nuget restore -Verbosity quiet
   #- ps: Vsix-TokenReplacement src\source.extension.cs 'Version = "([0-9\\.]+)"' 'Version = "{version}"'
 
