--- a/GLSLx64/GLSLx64.csproj
+++ b/GLSLx64/GLSLx64.csproj
@@ -81,7 +81,7 @@
   </ItemGroup>
   <ItemGroup>
     <PackageReference Include="GLSLhelper">
-      <Version>0.3.62</Version>
+      <Version>0.3.63</Version>
     </PackageReference>
     <PackageReference Include="Microsoft.VisualStudio.Composition">
       <Version>17.7.18</Version>
@@ -106,6 +106,12 @@
     <PackageReference Include="System.Reactive">
       <Version>6.0.0</Version>
     </PackageReference>
+  </ItemGroup>
+  <ItemGroup>
+    <ProjectReference Include="..\Glslang\Glslang.csproj">
+      <Project>{def91bf6-e90f-4556-ae03-1ec303a8ba5f}</Project>
+      <Name>Glslang</Name>
+    </ProjectReference>
   </ItemGroup>
   <Import Project="..\GLSL_Shared\GLSL_Shared.projitems" Label="Shared" />
   <Import Project="$(MSBuildToolsPath)\Microsoft.CSharp.targets" />
