--- a/GLSL/GLSL.csproj
+++ b/GLSL/GLSL.csproj
@@ -82,7 +82,7 @@
   </ItemGroup>
   <ItemGroup>
     <PackageReference Include="GLSLhelper">
-      <Version>0.3.63</Version>
+      <Version>0.3.67</Version>
     </PackageReference>
     <PackageReference Include="Microsoft.VisualStudio.Composition">
       <Version>16.9.20</Version>
@@ -93,6 +93,9 @@
     <PackageReference Include="Microsoft.VSSDK.BuildTools" Version="16.11.16">
       <IncludeAssets>runtime; build; native; contentfiles; analyzers; buildtransitive</IncludeAssets>
       <PrivateAssets>all</PrivateAssets>
+    </PackageReference>
+    <PackageReference Include="Newtonsoft.Json">
+      <Version>13.0.3</Version>
     </PackageReference>
     <PackageReference Include="OpenTK">
       <Version>3.3.3</Version>
